Began to make website responsive

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div>
         <img src="../images/nigeria-image2.jpg" alt="" class="image" />
       </div>
-      <div>
+      <div class="paragraph">
         <h3 class="text-muted">Why Nigeria?</h3>
         <h2>EKÓ ni baje</h2>
         <p>
