--- a/index.html
+++ b/index.html
@@ -33,100 +33,120 @@
         <h2>THE CITY THAT NEVER SLEEPS</h2>
         <a href="">Find Out More</a>
       </header>
-      <div class="second-hero">
-        <div>
-          <img src="../images/nigeria-image2.jpg" alt="" class="image" />
-        </div>
-        <div class="paragraph">
-          <h3 class="text-muted">Why Nigeria?</h3>
-          <h2>EKÓ ni baje</h2>
-          <p>
-            The legend has it that Lisbon was named Olissipo by the Romans, for
-            its resemblance to the Roman capital. Just like Rome, Lisbon began
-            its life as a humble settlement nestled among seven hills. However,
-            it wasn't until the 17th century, in the writing of Frey Nicolao
-            d'Oliveira, that Lisbon came to be called 'a cidade das sete
-            colinas' - the city of seven hills.
-            <br />
-            <br />
-            You can still see traces of ancient Lisbon today. Beyond the array
-            of shops with international brands, peaceful streetside cafes
-            selling the iconic pastel de nata and world class restaurants with a
-            variety of global cuisine, you can still wander the seven hills and
-            see the city from above, taking in the rolling terracotta rooftops,
-            the whitewashed walls and on the horizon, the soft blue sea.
-          </p>
-        </div>
-      </div>
-
-      <div class="card-group">
-        <div class="card">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d28996714.180629205!2d-16.10013711558713!3d27.480528339612786!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d50.8094788!2d-1.0758826!4m5!1s0x103b925b7ef4b0dd%3A0x2ce4844ddff97694!2sMr%20Biggs%2C%2032%2C%20Kudirat%20Abiola%20Way%2C%20Ikeja%2C%20Oregun%2C%20Lagos%2C%20Lagos%2C%20Lagos%2C%20Nigeria!3m2!1d6.593629399999999!2d3.3716749999999998!5e0!3m2!1sen!2suk!4v1685931104804!5m2!1sen!2suk"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-          <div class="card-body">
-            <h5 class="card-title">Seagull Method Café</h5>
-            <p class="card-text">
-              Everyone's favorite neighborhood cafe with a variety of breakfast
-              and brunch options. Address: Rua da Palmeira 23 What I like about
-              it It's tiny! Not always easy to get a seat but it's such a cozy
-              little place, the food is always tasty and the staff are so
-              friendly.
-            </p>
-            <p class="card-text">
-              <small class="text-body-secondary">Last updated 3 mins ago</small>
+      <main>
+        <section class="section-one">
+          <div>
+            <img
+              src="../images/nigeria-image2.jpg"
+              alt=""
+              class="img-fluid image"
+            />
+          </div>
+          <div class="paragraph">
+            <h3 class="text-muted">Why Nigeria?</h3>
+            <h2>EKÓ ni baje</h2>
+            <p>
+              The legend has it that Lisbon was named Olissipo by the Romans,
+              for its resemblance to the Roman capital. Just like Rome, Lisbon
+              began its life as a humble settlement nestled among seven hills.
+              However, it wasn't until the 17th century, in the writing of Frey
+              Nicolao d'Oliveira, that Lisbon came to be called 'a cidade das
+              sete colinas' - the city of seven hills.
+              <br />
+              You can still see traces of ancient Lisbon today. Beyond the array
+              of shops with international brands, peaceful streetside cafes
+              selling the iconic pastel de nata and world class restaurants with
+              a variety of global cuisine, you can still wander the seven hills
+              and see the city from above, taking in the rolling terracotta
+              rooftops, the whitewashed walls and on the horizon, the soft blue
+              sea.
             </p>
           </div>
-        </div>
-        <div class="card">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d28996714.180629205!2d-16.10013711558713!3d27.480528339612786!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d50.8094788!2d-1.0758826!4m5!1s0x103b925b7ef4b0dd%3A0x2ce4844ddff97694!2sMr%20Biggs%2C%2032%2C%20Kudirat%20Abiola%20Way%2C%20Ikeja%2C%20Oregun%2C%20Lagos%2C%20Lagos%2C%20Lagos%2C%20Nigeria!3m2!1d6.593629399999999!2d3.3716749999999998!5e0!3m2!1sen!2suk!4v1685931104804!5m2!1sen!2suk"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-          <div class="card-body">
-            <h5 class="card-title">Seagull Method Café</h5>
-            <p class="card-text">
-              Everyone's favorite neighborhood cafe with a variety of breakfast
-              and brunch options. Address: Rua da Palmeira 23 What I like about
-              it It's tiny! Not always easy to get a seat but it's such a cozy
-              little place, the food is always tasty and the staff are so
-              friendly.
-            </p>
-            <p class="card-text">
-              <small class="text-body-secondary">Last updated 3 mins ago</small>
-            </p>
+        </section>
+      </main>
+      <section class="section-two">
+        <h3 class="text-center text-muted">CAFES</h3>
+        <h2 class="text-center">My favorite restaurants in Lagos</h2>
+        <div class="card-group">
+          <div class="card">
+            <div class="row">
+              <div class="col"></div>
+              <div class="col">
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d28996714.180629205!2d-16.10013711558713!3d27.480528339612786!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d50.8094788!2d-1.0758826!4m5!1s0x103b925b7ef4b0dd%3A0x2ce4844ddff97694!2sMr%20Biggs%2C%2032%2C%20Kudirat%20Abiola%20Way%2C%20Ikeja%2C%20Oregun%2C%20Lagos%2C%20Lagos%2C%20Lagos%2C%20Nigeria!3m2!1d6.593629399999999!2d3.3716749999999998!5e0!3m2!1sen!2suk!4v1685931104804!5m2!1sen!2suk"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
+              </div>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Seagull Method Café</h5>
+              <p class="card-text">
+                Everyone's favorite neighborhood cafe with a variety of
+                breakfast and brunch options. Address: Rua da Palmeira 23 What I
+                like about it It's tiny! Not always easy to get a seat but it's
+                such a cozy little place, the food is always tasty and the staff
+                are so friendly.
+              </p>
+              <p class="card-text">
+                <small class="text-body-secondary"
+                  >Last updated 3 mins ago</small
+                >
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d28996714.180629205!2d-16.10013711558713!3d27.480528339612786!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d50.8094788!2d-1.0758826!4m5!1s0x103b925b7ef4b0dd%3A0x2ce4844ddff97694!2sMr%20Biggs%2C%2032%2C%20Kudirat%20Abiola%20Way%2C%20Ikeja%2C%20Oregun%2C%20Lagos%2C%20Lagos%2C%20Lagos%2C%20Nigeria!3m2!1d6.593629399999999!2d3.3716749999999998!5e0!3m2!1sen!2suk!4v1685931104804!5m2!1sen!2suk"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+            <div class="card-body">
+              <h5 class="card-title">Seagull Method Café</h5>
+              <p class="card-text">
+                Everyone's favorite neighborhood cafe with a variety of
+                breakfast and brunch options. Address: Rua da Palmeira 23 What I
+                like about it It's tiny! Not always easy to get a seat but it's
+                such a cozy little place, the food is always tasty and the staff
+                are so friendly.
+              </p>
+              <p class="card-text">
+                <small class="text-body-secondary"
+                  >Last updated 3 mins ago</small
+                >
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d28996714.180629205!2d-16.10013711558713!3d27.480528339612786!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d50.8094788!2d-1.0758826!4m5!1s0x103b925b7ef4b0dd%3A0x2ce4844ddff97694!2sMr%20Biggs%2C%2032%2C%20Kudirat%20Abiola%20Way%2C%20Ikeja%2C%20Oregun%2C%20Lagos%2C%20Lagos%2C%20Lagos%2C%20Nigeria!3m2!1d6.593629399999999!2d3.3716749999999998!5e0!3m2!1sen!2suk!4v1685931104804!5m2!1sen!2suk"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+            <div class="card-body">
+              <h5 class="card-title">Seagull Method Café</h5>
+              <p class="card-text">
+                Everyone's favorite neighborhood cafe with a variety of
+                breakfast and brunch options. Address: Rua da Palmeira 23 What I
+                like about it It's tiny! Not always easy to get a seat but it's
+                such a cozy little place, the food is always tasty and the staff
+                are so friendly.
+              </p>
+              <p class="card-text">
+                <small class="text-body-secondary"
+                  >Last updated 3 mins ago</small
+                >
+              </p>
+            </div>
           </div>
         </div>
-        <div class="card">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d28996714.180629205!2d-16.10013711558713!3d27.480528339612786!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d50.8094788!2d-1.0758826!4m5!1s0x103b925b7ef4b0dd%3A0x2ce4844ddff97694!2sMr%20Biggs%2C%2032%2C%20Kudirat%20Abiola%20Way%2C%20Ikeja%2C%20Oregun%2C%20Lagos%2C%20Lagos%2C%20Lagos%2C%20Nigeria!3m2!1d6.593629399999999!2d3.3716749999999998!5e0!3m2!1sen!2suk!4v1685931104804!5m2!1sen!2suk"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-          <div class="card-body">
-            <h5 class="card-title">Seagull Method Café</h5>
-            <p class="card-text">
-              Everyone's favorite neighborhood cafe with a variety of breakfast
-              and brunch options. Address: Rua da Palmeira 23 What I like about
-              it It's tiny! Not always easy to get a seat but it's such a cozy
-              little place, the food is always tasty and the staff are so
-              friendly.
-            </p>
-            <p class="card-text">
-              <small class="text-body-secondary">Last updated 3 mins ago</small>
-            </p>
-          </div>
-        </div>
-      </div>
+      </section>
       <div class="fourth-hero">
         <h3 class="text-center text-muted">GALLERY</h3>
         <h2 class="text-center">My photos from Nigeria</h2>
