Added restaurant images and worked on card structure

--- a/index.html
+++ b/index.html
@@ -80,7 +80,98 @@
                 </div>
                 <div class="col-sm-6">
                   <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d28996714.180629205!2d-16.10013711558713!3d27.480528339612786!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d50.8094788!2d-1.0758826!4m5!1s0x103b925b7ef4b0dd%3A0x2ce4844ddff97694!2sMr%20Biggs%2C%2032%2C%20Kudirat%20Abiola%20Way%2C%20Ikeja%2C%20Oregun%2C%20Lagos%2C%20Lagos%2C%20Lagos%2C%20Nigeria!3m2!1d6.593629399999999!2d3.3716749999999998!5e0!3m2!1sen!2suk!4v1685931104804!5m2!1sen!2suk"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.7152554674435!2d3.4213636!3d6.430613599999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103bf52daa5d50e5%3A0xb18fe83473964cb2!2sNOK%20by%20Alara!5e0!3m2!1sen!2suk!4v1686877922005!5m2!1sen!2suk"
+                    style="border: 0"
+                    allowfullscreen=""
+                    width="170"
+                    height="115"
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                  ></iframe>
+                </div>
+              </div>
+              <div class="card-body">
+                <h4 class="card-title fw-bold mb-3">NOK by Alara</h4>
+                <p class="card-text">
+                  NOK by Alara perfects the trendy ambiance of fine dining with
+                  the cultural quality of local Nigerian food and African
+                  cuisines with an innovative twist.
+                </p>
+                <h5 class="fw-bold mb-3">Address</h5>
+                <p>12a Akin Olugbade Victoria Island, Lagos</p>
+                <h5 class="fw-bold mb-3">What i like about it</h5>
+                <p>
+                  From the stunning interior layout to the airy garden, NOK by
+                  Alara has the Afrocentric aesthetic down to a pat.
+                </p>
+                <a
+                  href="http://www.nokbyalara.com/"
+                  target="_blank"
+                  class="button"
+                  >LEARN MORE</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <div class="row">
+                <div class="col-sm-6">
+                  <img
+                    src="../images/restaurant2-image.jpeg"
+                    alt=""
+                    class="img-fluid"
+                  />
+                </div>
+                <div class="col-sm-6">
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.595065314956!2d3.4708883999999998!3d6.446005899999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103bf44fc9394cfd%3A0x1a5157bcd68a0bdf!2sBrass%20%26%20Copper!5e0!3m2!1sen!2suk!4v1686877898649!5m2!1sen!2suk"
+                    style="border: 0"
+                    width="170"
+                    height="115"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                  ></iframe>
+                </div>
+              </div>
+              <div class="card-body">
+                <h4 class="card-title fw-bold mb-3">Brass & Copper</h4>
+                <p class="card-text">
+                  Located in the heart of Lekki in Lagos, Brass and Copper is
+                  perfect for an afternoon meeting, a girl's brunch, an event
+                  launch, and even a fabulous birthday party.
+                </p>
+
+                <h5 class="fw-bold mb-3">Address</h5>
+                <p>
+                  No 1 Olubunmi Owa St, Lekki Phase I 106104, Lagos, Nigeria
+                </p>
+                <h5 class="fw-bold mb-3">What i like about it</h5>
+                <p>
+                  The moment you step into Brass & Copper, you can tell that
+                  you're in for an enjoyable experience.
+                </p>
+                <a
+                  href="https://foodieinlagos.com/brass-and-copper/"
+                  target="_blank"
+                  class="button"
+                  >LEARN MORE</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <div class="row">
+                <div class="col-sm-6">
+                  <img
+                    src="../images/restaurant3-image.png"
+                    alt=""
+                    class="img-fluid"
+                  />
+                </div>
+                <div class="col-sm-6">
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3963.4946370499815!2d3.352248!3d6.5852682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b9216f4eac081%3A0xabf8c0890dac0b9e!2sYellow%20Chilli%20Restaurant%20%26%20Bar!5e0!3m2!1sen!2suk!4v1686878099936!5m2!1sen!2suk"
+                    width="170"
+                    height="115"
                     style="border: 0"
                     allowfullscreen=""
                     loading="lazy"
@@ -89,67 +180,27 @@
                 </div>
               </div>
               <div class="card-body">
-                <h5 class="card-title">Seagull Method Café</h5>
+                <h4 class="card-title fw-bold mb-3">Yellow Chilli</h4>
                 <p class="card-text">
-                  Everyone's favorite neighborhood cafe with a variety of
-                  breakfast and brunch options. Address: Rua da Palmeira 23 What
-                  I like about it It's tiny! Not always easy to get a seat but
-                  it's such a cozy little place, the food is always tasty and
-                  the staff are so friendly.
+                  If you want to sample gourmet meals and still get a taste of
+                  the local flavors, Yellow Chilli is one of the best
+                  restaurants to exploring your menu options!
                 </p>
-                <p class="card-text">
-                  <small class="text-body-secondary"
-                    >Last updated 3 mins ago</small
-                  >
+                <h5 class="fw-bold mb-3">Address</h5>
+                <p>
+                  35 Joel Ogunnaike St, Ikeja GRA 101233, Ikeja, Lagos, Nigeria
                 </p>
-              </div>
-            </div>
-            <div class="card">
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d28996714.180629205!2d-16.10013711558713!3d27.480528339612786!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d50.8094788!2d-1.0758826!4m5!1s0x103b925b7ef4b0dd%3A0x2ce4844ddff97694!2sMr%20Biggs%2C%2032%2C%20Kudirat%20Abiola%20Way%2C%20Ikeja%2C%20Oregun%2C%20Lagos%2C%20Lagos%2C%20Lagos%2C%20Nigeria!3m2!1d6.593629399999999!2d3.3716749999999998!5e0!3m2!1sen!2suk!4v1685931104804!5m2!1sen!2suk"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
-              <div class="card-body">
-                <h5 class="card-title">Seagull Method Café</h5>
-                <p class="card-text">
-                  Everyone's favorite neighborhood cafe with a variety of
-                  breakfast and brunch options. Address: Rua da Palmeira 23 What
-                  I like about it It's tiny! Not always easy to get a seat but
-                  it's such a cozy little place, the food is always tasty and
-                  the staff are so friendly.
+                <h5 class="fw-bold mb-3">What i like about it</h5>
+                <p>
+                  This pan-African restaurant features delicacies on all levels
+                  of flavor and spice.
                 </p>
-                <p class="card-text">
-                  <small class="text-body-secondary"
-                    >Last updated 3 mins ago</small
-                  >
-                </p>
-              </div>
-            </div>
-            <div class="card">
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d28996714.180629205!2d-16.10013711558713!3d27.480528339612786!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d50.8094788!2d-1.0758826!4m5!1s0x103b925b7ef4b0dd%3A0x2ce4844ddff97694!2sMr%20Biggs%2C%2032%2C%20Kudirat%20Abiola%20Way%2C%20Ikeja%2C%20Oregun%2C%20Lagos%2C%20Lagos%2C%20Lagos%2C%20Nigeria!3m2!1d6.593629399999999!2d3.3716749999999998!5e0!3m2!1sen!2suk!4v1685931104804!5m2!1sen!2suk"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
-              <div class="card-body">
-                <h5 class="card-title">Seagull Method Café</h5>
-                <p class="card-text">
-                  Everyone's favorite neighborhood cafe with a variety of
-                  breakfast and brunch options. Address: Rua da Palmeira 23 What
-                  I like about it It's tiny! Not always easy to get a seat but
-                  it's such a cozy little place, the food is always tasty and
-                  the staff are so friendly.
-                </p>
-                <p class="card-text">
-                  <small class="text-body-secondary"
-                    >Last updated 3 mins ago</small
-                  >
-                </p>
+                <a
+                  href="https://www.yellowchilling.com/"
+                  target="_blank"
+                  class="button"
+                  >LEARN MORE</a
+                >
               </div>
             </div>
           </div>
