Made website SEO friendly & finalised making website responsive

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       content="width=
     , initial-scale=1.0"
     />
+    <meta
+      name="description"
+      content="Lagos is an amazing city to visit in Nigeria, this page gives some information about the city Lagos and fun activities that can be done whilst visiting"
+    />
     <title>Travel Project</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -31,7 +35,9 @@
         <h3 class="mb-3">.TRAVEL.</h3>
         <h1 class="mb-3">Welcome to Lagos</h1>
         <h2>AFRICA'S BIG APPLE</h2>
-        <a href="/#reason" class="button-intro">LEARN MORE</a>
+        <a href="/#reason" class="button-intro" title="Learn about Lagos"
+          >LEARN MORE</a
+        >
       </header>
 
       <main>
@@ -39,7 +45,7 @@
           <div>
             <img
               src="../images/nigeria-image9.jpeg"
-              alt=""
+              alt="Image for the first section"
               class="img-fluid image"
             />
           </div>
@@ -84,7 +90,7 @@
                 <div>
                   <img
                     src="../images/restaurant1-image.jpeg"
-                    alt=""
+                    alt="NOK by Alara restaurant"
                     class="img-fluid restaurant-image"
                   />
                 </div>
@@ -117,6 +123,7 @@
                   href="http://www.nokbyalara.com/"
                   target="_blank"
                   class="button"
+                  title="NOK By Alara Restaurant"
                   >LEARN MORE</a
                 >
               </div>
@@ -126,7 +133,7 @@
                 <div>
                   <img
                     src="../images/restaurant2-image.jpeg"
-                    alt=""
+                    alt="Brass and copper restaurant"
                     class="img-fluid restaurant-image"
                   />
                 </div>
@@ -162,6 +169,7 @@
                   href="https://foodieinlagos.com/brass-and-copper/"
                   target="_blank"
                   class="button"
+                  title="Brass & Copper Restaurant"
                   >LEARN MORE</a
                 >
               </div>
@@ -171,7 +179,7 @@
                 <div>
                   <img
                     src="../images/restaurant3-image.png"
-                    alt=""
+                    alt="Yellow Chilli restaurant"
                     class="img-fluid restaurant-image"
                   />
                 </div>
@@ -206,6 +214,7 @@
                   href="https://www.yellowchilling.com/"
                   target="_blank"
                   class="button"
+                  title="Yellow ChilliRestaurant"
                   >LEARN MORE</a
                 >
               </div>
@@ -217,7 +226,7 @@
           <h2 class="text-center fw-bold mb-5">My Photos from Nigeria</h2>
           <div class="instagram-media">
             <blockquote
-              class="instagram-media first-nedia"
+              class="instagram-media first-media mb-5"
               data-instgrm-permalink="https://www.instagram.com/p/CVrXJUSI3-v/?utm_source=ig_embed&amp;utm_campaign=loading"
               data-instgrm-version="14"
               style="
@@ -499,7 +508,7 @@
               </div>
             </blockquote>
             <blockquote
-              class="instagram-media"
+              class="instagram-media mb-5"
               data-instgrm-permalink="https://www.instagram.com/p/CQJOapZhGWR/?utm_source=ig_embed&amp;utm_campaign=loading"
               data-instgrm-version="14"
               style="
@@ -1074,7 +1083,10 @@
               <h3 class="fw-bold">More about Lagos</h3>
               <ul>
                 <li>
-                  <a href="https://www.lagos-airport.com/" target="_blank"
+                  <a
+                    href="https://www.lagos-airport.com/"
+                    target="_blank"
+                    title="Lagos Airport"
                     >Lagos International Airport</a
                   >
                 </li>
@@ -1082,6 +1094,7 @@
                   <a
                     href="https://www.europa.uk.com/global-1000-atlas/map/?pid=107141 "
                     target="_blank"
+                    title="Lagos Map"
                     >Map of Lagos</a
                   >
                 </li>
@@ -1089,6 +1102,7 @@
                   <a
                     href="https://www.expatarrivals.com/africa/nigeria/lagos/getting-around-lagos"
                     target="_blank"
+                    title="Transport in Lagos"
                     >Public transport map</a
                   >
                 </li>
@@ -1109,7 +1123,10 @@
               I created this page as part of a project for SheCodes Responsive
               to develop my coding skills. This project was coded by Maryam
               Sulayman and is
-              <a href="https://github.com/maryam-sulayman/Responsive-add-on">
+              <a
+                href="https://github.com/maryam-sulayman/Responsive-add-on"
+                title="Source Code"
+              >
                 open sourced.</a
               >
             </p>
