added a target _blank to open source code link

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                   href="https://www.yellowchilling.com/"
                   target="_blank"
                   class="button"
-                  title="Yellow ChilliRestaurant"
+                  title="Yellow Chilli Restaurant"
                   >LEARN MORE</a
                 >
               </div>
@@ -1126,6 +1126,7 @@
               <a
                 href="https://github.com/maryam-sulayman/Responsive-add-on"
                 title="Source Code"
+                target="_blank"
               >
                 open sourced.</a
               >
